welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: class Array takes type parameters
def changeTableau(T:Array):Array[Color]={ // assigne les bonnes couleurs aux tableaux pour nouvelle colonne
                    ^Array1:30: error: not found: value S
			S = changeTableau();
                        ^Array1:32: error: not found: value S
				setCouleurBrosse(S(d))
                                                 ^